@@ -1,3 +1,15 @@
+2020-05-05  Timothy Horton  <timothy_horton@apple.com>
+
+        "Essential Skeleton" does not respond to mouse events, only touch events
+        https://bugs.webkit.org/show_bug.cgi?id=211439
+        <rdar://problem/62694519>
+
+        Reviewed by Wenson Hsieh.
+
+        * platform/RuntimeApplicationChecks.h:
+        * platform/cocoa/RuntimeApplicationChecksCocoa.mm:
+        (WebCore::IOSApplication::isEssentialSkeleton):
+
 2020-05-05  Megan Gardner  <megan_gardner@apple.com>
 
         Style is not applied when changed on the first line of a new mail message.
